--- a/ini.ini
+++ b/ini.ini
@@ -2,7 +2,8 @@
 output_path = dataset.csv
 databases = airport 
 n_attack_queries = 50
-n_normal_queries = 20
+n_normal_queries = 50
+n_undefined_queries = 50
 
 [PAYLOADS]
 sqlmap_boolean = 1/6
@@ -19,7 +20,7 @@ update = 0.25
 insert = 0.25
 
 [RANDOM]
-seed = 18613458abg564
+seed = 42
 
 ; replace_for_unicity = False
 ; replace_special_char_data = False
