feat(generate_normal_queries): Implemented normal queries generation

--- a/ini.ini
+++ b/ini.ini
@@ -14,10 +14,10 @@ sqlmap_time = 1/6
 sqlmap_union = 1/6
 
 [SQL_STATEMENTS]
-select = 0.25
-delete = 0.25
-update = 0.25
-insert = 0.25
+select = 1/4
+delete = 1/4
+update = 1/4
+insert = 1/4
 
 [RANDOM]
 seed = 42
