wip(sqlmap_generator)

--- a/ini.ini
+++ b/ini.ini
@@ -6,12 +6,12 @@ n_normal_queries = 50
 n_undefined_queries = 50
 
 [PAYLOADS]
-sqlmap_boolean = 1/6
-sqlmap_error = 1/6
-sqlmap_inline = 1/6
-sqlmap_stacked = 1/6
-sqlmap_time = 1/6
-sqlmap_union = 1/6
+sqlmap.boolean_blind = 1/6
+sqlmap.error_based = 1/6
+sqlmap.inline_query = 1/6
+sqlmap.stacked_queries = 1/6
+sqlmap.time_blind = 1/6
+sqlmap.union_query = 1/6
 
 [SQL_STATEMENTS]
 select = 1/4
