wip(generate_attack_queries)

--- a/ini.ini
+++ b/ini.ini
@@ -6,12 +6,12 @@ n_normal_queries = 50
 n_undefined_queries = 50
 
 [PAYLOADS]
-sqlmap.boolean_blind = 1/6
-sqlmap.error_based = 1/6
-sqlmap.inline_query = 1/6
-sqlmap.stacked_queries = 1/6
-sqlmap.time_blind = 1/6
-sqlmap.union_query = 1/6
+sqlmap.boolean_blind = 1/5
+sqlmap.error_based = 1/5
+sqlmap.inline_query = 1/5
+sqlmap.stacked_queries = 1/5
+sqlmap.time_blind = 1/5
+; sqlmap.union_query = 1/6
 
 [SQL_STATEMENTS]
 select = 1/4
