wip(generate_attack_queries): all normal are syntactically valid

--- a/ini.ini
+++ b/ini.ini
@@ -1,9 +1,14 @@
 [GENERAL]
 output_path = dataset.csv
 databases = airport 
-n_attack_queries = 50
+n_attack_queries = 500
 n_normal_queries = 50
 n_undefined_queries = 50
+
+[MYSQL]
+user=toto
+password=toto
+socket_path=/home/gquetel/tmp/scylla/mysqld_1/socket
 
 [PAYLOADS]
 sqlmap.boolean_blind = 1/5
