wip: Added crawled, removed undefined, fixed proportion, 90% syntactically valid

--- a/ini.ini
+++ b/ini.ini
@@ -1,28 +1,28 @@
 [GENERAL]
 output_path = dataset.csv
 databases = airport 
-n_attack_queries = 50
-n_normal_queries = 50
-n_undefined_queries = 1000
+n_attack_queries = 100
+n_normal_queries = 100
 
 [MYSQL]
 user=toto
 password=toto
-socket_path=/home/gquetel/tmp/hydra/mysqld_1/socket
+socket_path=/home/gquetel/tmp/scylla/mysqld_1/socket
 
 [PAYLOADS]
-sqlmap.boolean_blind = 1/5
-sqlmap.error_based = 1/5
-sqlmap.inline_query = 1/5
-sqlmap.stacked_queries = 1/5
-sqlmap.time_blind = 1/5
+sqlmap.boolean_blind = 1/10
+sqlmap.error_based = 3/10
+sqlmap.inline_query = 1/10
+sqlmap.stacked_queries = 1/10
+sqlmap.time_blind = 3/10
+crawled.inband = 1/10
 ; sqlmap.union_query = 1/6
 
 [SQL_STATEMENTS]
-select = 1/4
-delete = 1/4
-update = 1/4
-insert = 1/4
+select = 7/10
+delete = 1/10
+update = 1/10
+insert = 1/10
 
 [RANDOM]
 seed = 42
