wip: union_query integration to fix

--- a/ini.ini
+++ b/ini.ini
@@ -1,22 +1,23 @@
 [GENERAL]
 output_path = dataset.csv
 databases = airport 
-n_attack_queries = 10000
-n_normal_queries = 10000
+n_attack_queries = 1000
+n_normal_queries = 1000
+
 
 [MYSQL]
 user=toto
 password=toto
-socket_path=/home/gquetel/tmp/scylla/mysqld_1/socket
+socket_path=/home/gquetel/tmp/hydra/mysqld_1/socket
 
 [PAYLOADS]
 sqlmap.boolean_blind = 1/10
 sqlmap.error_based = 3/10
 sqlmap.inline_query = 1/10
 sqlmap.stacked_queries = 1/10
-sqlmap.time_blind = 3/10
+sqlmap.time_blind = 2/10
 crawled.inband = 1/10
-; sqlmap.union_query = 1/6
+sqlmap.union_query = 1/10
 
 [SQL_STATEMENTS]
 select = 7/10
@@ -31,3 +32,4 @@ seed = 42
 ; replace_special_char_data = False
 ; per_density_malicious_inject = 0.2
 ; per_char_obfuscation = 0
+
