feat: fine-tuning dataset generation, errors handling, cache feature

--- a/ini.ini
+++ b/ini.ini
@@ -6,8 +6,8 @@ n_normal_queries = 10000
 
 
 [MYSQL]
-user=toto
-password=toto
+user=root
+password=root
 socket_path=/home/gquetel/tmp/scylla/mysqld_1/socket
 
 [PAYLOADS]
