feat: broken pipe error handling

--- a/ini.ini
+++ b/ini.ini
@@ -6,8 +6,8 @@ n_normal_queries = 10000
 
 
 [MYSQL]
-user=root
-password=root
+user=tata
+password=tata
 socket_path=/home/gquetel/tmp/scylla/mysqld_1/socket
 
 [PAYLOADS]
