--- a/ini.ini
+++ b/ini.ini
@@ -1,8 +1,8 @@
 [GENERAL]
 output_path = dataset.csv
 databases = airport 
-n_attack_queries = 0
-n_normal_queries = 10000
+; n_attack_queries = 0
+; n_normal_queries = 10000
 
 
 [MYSQL]
