feat(generation): deleted useless code, added attack ratio

--- a/ini.ini
+++ b/ini.ini
@@ -1,36 +1,18 @@
 [GENERAL]
 output_path = dataset.csv
 databases = airport 
-; n_attack_queries = 0
-; n_normal_queries = 10000
-
+attacks_ratio = 0.1
+seed = 42
 
 [MYSQL]
 user=tata
 password=tata
 socket_path=/home/gquetel/tmp/scylla/mysqld_1/socket
 
-[PAYLOADS]
-sqlmap.boolean_blind = 1/10
-sqlmap.error_based = 3/10
-sqlmap.inline_query = 1/10
-sqlmap.stacked_queries = 1/10
-sqlmap.time_blind = 2/10
-crawled.inband = 1/10
-sqlmap.union_query = 1/10
 
 [SQL_STATEMENTS]
-
 select = 7/10
 delete = 1/10
 update = 1/10
 insert = 1/10
-
-[RANDOM]
-seed = 42
-
-; replace_for_unicity = False
-; replace_special_char_data = False
-; per_density_malicious_inject = 0.2
-; per_char_obfuscation = 0
 
