feat(generation): set execution limit through connection, added admin statements

--- a/ini.ini
+++ b/ini.ini
@@ -9,10 +9,9 @@ user=tata
 password=tata
 socket_path=/home/gquetel/tmp/scylla/mysqld_1/socket
 
-
-[SQL_STATEMENTS]
+[NORMAL_TRAFFIC_TARGETS]
 select = 7/10
 delete = 1/10
 update = 1/10
-insert = 1/10
-
+insert = 9/100
+admin = 1/100
