docs: ini.ini fields description, README Generation process

--- a/ini.ini
+++ b/ini.ini
@@ -1,15 +1,27 @@
 [GENERAL]
+; Generated dataset path
 output_path = dataset.csv
-databases = airport 
+; Name of databases to use for generation. Initially we had different schemas
+; but then choose to focus on the airport one to begin with. Ultimately,
+; we plan to support multiple schemas to study the performance of generic datasets.
+databases = airport
+; Ratio of attacks in the test set. This does not modify the final number of 
+; attack in the dataset but the number of generated normal samples to reach the 
+; ratio value.
 attacks_ratio = 0.1
+; Seed to have constance in template selection or normal values selection.
 seed = 42
 
 [MYSQL]
+; user and password used for interacting with the mysql server. By default, it 
+; consists of the unprivileged user created by the provided init_db.sql script.
 user=tata
 password=tata
-socket_path=/home/gquetel/tmp/scylla/mysqld_1/socket
+; path to socket on which the mysql server is listening.
+socket_path=/usr/local/mysqld_1/socket
 
 [NORMAL_TRAFFIC_TARGETS]
+; Statement type proportion for the normal generated samples.
 select = 7/10
 delete = 9/100
 update = 1/10
