feat(ini.ini): Added 'root_password' field in ini file for pt-kill invocation

--- a/ini.ini
+++ b/ini.ini
@@ -19,6 +19,9 @@ user=tata
 password=tata
 ; path to socket on which the mysql server is listening.
 socket_path=/usr/local/mysqld_1/socket
+; Password for MySQL root user, required for `pt-kill` command executed between 
+; each attack campaign, making sure no request possess a lock on the DB.
+root_password=verysecurepwd
 
 [NORMAL_TRAFFIC_TARGETS]
 ; Statement type proportion for the normal generated samples.
